--- a/views/deliveryOrder/info.ejs
+++ b/views/deliveryOrder/info.ejs
@@ -107,7 +107,7 @@
                         <div class="row my-1">
                             <div class="col fw-bold ">
                                 <label for="Company">公司名稱:</label>
-                                <input type="hidden" value="<%= datas._id %>" name="_id">
+                                
                             </div>
                             <div class="col">
                                 <input type="text" id="Company" name="company" value="<%= datas.company %>"
@@ -251,7 +251,7 @@
                                                     <% for(let list of lists[5]){ k='' ; %>
                                                         <option value="<%= list._id %>" <% if(list._id==data.stock_id){
                                                             k='exsits' %> selected <% } %>>
-                                                                <%= list.area + ' ' + list.name %>
+                                                                <%= list.area + ' ' + list.name %><%= list._id %>|||||<%= data.stock_id %>
                                                         </option>
                                                         <% } %>
                                                             <% if(k!='exsits' ){%>
