--- a/views/deliveryOrder/create.ejs
+++ b/views/deliveryOrder/create.ejs
@@ -153,13 +153,13 @@
                             <label class="fw-bold ">貨品資料：</label>
                             <div class="col">
 
-                                <div class="row py-1 my-1 border-bottom border-primary">
+                                <div class="row">
                                     <div class="col">
 
                                         <input type="hidden" value="" id="_id">
 
                                         <label for="product_id-0">貨品編號:</label>
-                                        <select name="product_id" id="product_id-0">
+                                        <select name="product_id" id="product_id-0" class="form-select form-select-sm">
                                             <option value="">-----請選擇-----</option>
                                             <% for(let data of datas[0]){ %>
                                                 <option value="<%= data._id %>">
@@ -170,7 +170,7 @@
                                     </div>
                                     <div class="col">
                                         <label for="name-0">貨品名稱:</label>
-                                        <select name="name" id="name-0">
+                                        <select name="name" id="name-0" class="form-select form-select-sm">
                                             <option value="">-----請選擇-----</option>
                                             <% for(let data of datas[1]){ %>
                                                 <option value="<%= data._id %>">
@@ -181,7 +181,7 @@
                                     </div>
                                     <div class="col">
                                         <label for="type-0">類型:</label>
-                                        <select id="type-0">
+                                        <select id="type-0" class="form-select form-select-sm">
                                             <option value="">-----請選擇-----</option>
                                             <% for(let data of datas[2]){ %>
                                                 <option value="<%= data._id %>">
@@ -192,7 +192,7 @@
                                     </div>
                                     <div class="col">
                                         <label for="brand-0">品牌:</label>
-                                        <select name="brand" id="brand-0">
+                                        <select name="brand" id="brand-0" class="form-select form-select-sm">
                                             <option value="">-----請選擇-----</option>
                                             <% for(let data of datas[3]){ %>
                                                 <option value="<%= data._id %>">
@@ -201,9 +201,11 @@
                                                 <% } %>
                                         </select>
                                     </div>
+                                </div>
+                                <div class="row py-1 my-1 border-bottom border-primary">
                                     <div class="col">
                                         <label for="origin-0">來源地:</label>
-                                        <select name="origin" id="origin-0">
+                                        <select name="origin" id="origin-0" class="form-select form-select-sm">
                                             <option value="">-----請選擇-----</option>
                                             <% for(let data of datas[4]){ %>
                                                 <option value="<%= data._id %>">
@@ -214,7 +216,7 @@
                                     </div>
                                     <div class="col">
                                         <label for="stock_id-0">所在倉庫區:</label>
-                                        <select name="stock_id" id="stock_id-0">
+                                        <select name="stock_id" id="stock_id-0" class="form-select form-select-sm">
                                             <option value="">-----請選擇-----</option>
                                             <% for(let data of datas[5]){ %>
                                                 <option value="<%= data._id %>">
